feat: Detail service blog

--- a/Areas/Introduction/Views/HomePage/DetailRoomService.cshtml
+++ b/Areas/Introduction/Views/HomePage/DetailRoomService.cshtml
@@ -1,6 +1,9 @@
+@using App.Models.ServicesModel
 @{
     ViewData["Title"] = "Chi tiết Bài Viết";
 }
+@model ServicesBlog
+
 <header class="header-section">
     <div class="top-nav">
         <div class="container">
@@ -44,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="logo">
-                        <a href="./index.html"><img src="/client_part/client_part/img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="../../client_part/img/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-9">
@@ -80,35 +83,18 @@
 </header>
 
 <!-- Property Details Hero Section Begin -->
-<section class="pd-hero-section set-bg" data-setbg="client_part/img/properties/product-content-bg.jpg">
+<section class="pd-hero-section set-bg"
+    data-setbg="https://imbfaeyswkneestptfkr.supabase.co/storage/v1/object/public/home_img/@Model.Images[0]">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
                 <div class="pd-hero-text">
-                    <p class="room-location"><i class="icon_pin"></i> 9721 Glen Creek Ave. Ballston Spa, NY</p>
-                    <h2>Villa 9721 Glen Creek</h2>
+                    <p class="room-location"><i class="icon_pin"></i> @Model.Address</p>
+                    <h2>@Model.Title</h2>
                     <div class="room-price">
                         <span>Start Form:</span>
-                        <p>$3.000.000</p>
+                        <p>@Model.RentalPrice.ToString("#,##0") VND</p>
                     </div>
-                    <ul class="room-features">
-                        <li>
-                            <i class="fa fa-arrows"></i>
-                            <p>5201 sqft</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-bed"></i>
-                            <p>8 Bed Room</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-bath"></i>
-                            <p>7 Baths Bed</p>
-                        </li>
-                        <li>
-                            <i class="fa fa-car"></i>
-                            <p>1 Garage</p>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -131,33 +117,36 @@
                     </div>
                     <div class="property-more-pic">
                         <div class="product-pic-zoom">
-                            <img class="product-big-img" src="client_part/img/properties/property-details-b1.jpg"
-                                alt="">
+                            <img class="product-big-img"
+                                src="https://imbfaeyswkneestptfkr.supabase.co/storage/v1/object/public/home_img/@Model.Images[0]"
+                                alt="Property Image">
                         </div>
+
                         <div class="product-thumbs">
                             <div class="product-thumbs-track ps-slider owl-carousel">
-                                <div class="pt" data-imgbigurl="client_part/img/properties/property-details-b2.jpg"><img
-                                        src="client_part/img/properties/thumb-1.jpg" alt=""></div>
-                                <div class="pt active"
-                                    data-imgbigurl="client_part/img/properties/property-details-b1.jpg"><img
-                                        src="client_part/img/properties/thumb-2.jpg" alt=""></div>
-                                <div class="pt" data-imgbigurl="client_part/img/properties/property-details-b3.jpg"><img
-                                        src="client_part/img/properties/thumb-3.jpg" alt=""></div>
-                                <div class="pt" data-imgbigurl="client_part/img/properties/property-details-b4.jpg"><img
-                                        src="client_part/img/properties/thumb-4.jpg" alt=""></div>
-                                <div class="pt" data-imgbigurl="client_part/img/properties/property-details-b5.jpg"><img
-                                        src="client_part/img/properties/thumb-5.jpg" alt=""></div>
+                                @{
+                                    var count_sm = 1;
+                                    foreach (var item in Model.Images)
+                                    {
+                                        if (count_sm > 5) // Giới hạn hiển thị 5 ảnh
+                                            break;
+
+                                        <div class="pt @(count_sm == 1 ? "active" : "")"
+                                            data-imgbigurl="https://imbfaeyswkneestptfkr.supabase.co/storage/v1/object/public/home_img/@item">
+                                            <img class="product-fix-img"
+                                                src="https://imbfaeyswkneestptfkr.supabase.co/storage/v1/object/public/home_img/@item"
+                                                alt="Property Thumbnail">
+                                        </div>
+
+                                        count_sm++;
+                                    }
+                                }
                             </div>
                         </div>
                     </div>
                     <div class="pd-desc">
                         <h4>Description</h4>
-                        <p>Learn how to improve your playing quality and even overall understanding of online gaming
-                            and how you perform while playing online. Gaming online is a huge business nowadays and
-                            that means that there are millions of people worldwide at online game sites all the
-                            time. Many are people just like you and me that like to play online and have fun doing
-                            it. Some of these people enjoy it so much, that they often do not even care about
-                            improving their skill and raising their chances of winning.</p>
+                        <p>@Html.Raw(Model.ContentDescription)</p>
                     </div>
                     <div class="pd-details-tab">
                         <div class="tab-item">
@@ -175,108 +164,69 @@
                         </div>
                         <div class="tab-item-content">
                             <div class="tab-content">
+                                <!-- Tab 1: Chi tiết phòng -->
                                 <div class="tab-pane fade-in active" id="tab-1" role="tabpanel">
                                     <div class="property-more-table">
-                                        <table class="left-table">
+                                        <table>
                                             <tbody>
                                                 <tr>
-                                                    <td class="pt-name">Price</td>
-                                                    <td class="p-value">$ 138,000</td>
+                                                    <td class="pt-name">Giá chỉ từ</td>
+                                                    <td class="p-value">@Model.RentalPrice.ToString("#,##0") VND</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Property Type</td>
-                                                    <td class="p-value">Villa</td>
+                                                    <td class="pt-name">Diện tích phòng từ</td>
+                                                    <td class="p-value">@Model.Area m&sup2;</td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Year Built</td>
-                                                    <td class="p-value">2016</td>
+                                                    <td class="pt-name">Đối tượng</td>
+                                                    <td class="p-value">Phù hợp cho sinh viên, gia đình</td>
+                                                    <!-- Thay bằng dữ liệu thực -->
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Bathrooms</td>
-                                                    <td class="p-value">3</td>
+                                                    <td class="pt-name">Tiện nghi</td>
+                                                    <td class="p-value">Wi-Fi, điều hòa, nước nóng</td>
+                                                    <!-- Thay bằng dữ liệu thực -->
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Rooms</td>
-                                                    <td class="p-value">12</td>
+                                                    <td class="pt-name">Môi trường xung quanh</td>
+                                                    <td class="p-value">Gần trường học, công viên</td>
+                                                    <!-- Thay bằng dữ liệu thực -->
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Parking lots</td>
-                                                    <td class="p-value">3</td>
+                                                    <td class="pt-name">Khu vực để xe</td>
+                                                    <td class="p-value">Có, sức chứa 3 xe</td>
+                                                    <!-- Thay bằng dữ liệu thực -->
                                                 </tr>
                                                 <tr>
-                                                    <td class="pt-name">Lot area</td>
-                                                    <td class="p-value">200 spft</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        <table class="right-table">
-                                            <tbody>
-                                                <tr>
-                                                    <td class="pt-name">Agent</td>
-                                                    <td class="p-value">Adam Smith</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Reference</td>
-                                                    <td class="p-value">#2019</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Contract type</td>
-                                                    <td class="p-value">Sale</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Beds</td>
-                                                    <td class="p-value">4</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Garages</td>
-                                                    <td class="p-value">2</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Home area</td>
-                                                    <td class="p-value">1200 sqft</td>
-                                                </tr>
-                                                <tr>
-                                                    <td class="pt-name">Gara Size</td>
-                                                    <td class="p-value">200 sqft</td>
+                                                    <td class="pt-name">Diện tích khu đất</td>
+                                                    <td class="p-value">200 m&sup2;</td> <!-- Thay bằng dữ liệu thực -->
                                                 </tr>
                                             </tbody>
                                         </table>
                                     </div>
                                 </div>
+
+                                <!-- Tab 2: Mô tả chi tiết -->
                                 <div class="tab-pane fade" id="tab-2" role="tabpanel">
                                     <div class="pd-table-desc">
-                                        <p>Learn how to improve your playing quality and even overall understanding
-                                            of online gaming and how you perform while playing online. Gaming online
-                                            is a huge business nowadays and that means that there are millions of
-                                            people worldwide at online game sites all the time. Many are people just
-                                            like you and me that like to play online and have fun doing it. Some of
-                                            these people enjoy it so much, that they often do not even care about
-                                            improving their skill and raising their chances of winning.</p>
-                                        <p>Learn how to improve your playing quality and even overall understanding
-                                            of online gaming and how you perform while playing online. Gaming online
-                                            is a huge business nowadays and that means that there are millions of
-                                            people worldwide at online game sites all the time. Many are people just
-                                            like you and me that like to play online and have fun doing it. Some of
-                                            these people enjoy it so much, that they often do not even care about
-                                            improving their skill and raising their chances of winning.</p>
+                                        <p>Phòng được thiết kế thoáng mát, hiện đại và đầy đủ tiện nghi. Khu vực yên
+                                            tĩnh, an ninh đảm bảo, gần các tiện ích công cộng.</p>
+                                        <p>Đây là lựa chọn lý tưởng cho những ai tìm kiếm không gian sống tiện nghi, phù
+                                            hợp cho sinh viên và gia đình trẻ.</p>
                                     </div>
                                 </div>
+
+                                <!-- Tab 3: Tiện nghi và dịch vụ -->
                                 <div class="tab-pane fade" id="tab-3" role="tabpanel">
                                     <div class="pd-table-amenities">
-                                        <p>Learn how to improve your playing quality and even overall understanding
-                                            of online gaming and how you perform while playing online. Gaming online
-                                            is a huge business nowadays and that means that there are millions of
-                                            people worldwide at online game sites all the time. Many are people just
-                                            like you and me that like to play online and have fun doing it. Some of
-                                            these people enjoy it so much, that they often do not even care about
-                                            improving their skill and raising their chances of winning.</p>
-                                        <p>Learn how to improve your playing quality and even overall understanding
-                                            of online gaming and how you perform while playing online. Gaming online
-                                            is a huge business nowadays and that means that there are millions of
-                                            people worldwide at online game sites all the time. Many are people just
-                                            like you and me that like to play online and have fun doing it. Some of
-                                            these people enjoy it so much, that they often do not even care about
-                                            improving their skill and raising their chances of winning.</p>
+                                        <p>Các tiện nghi bao gồm:</p>
+                                        <ul>
+                                            <li>Wi-Fi miễn phí</li>
+                                            <li>Máy lạnh</li>
+                                            <li>Nước nóng</li>
+                                            <li>Bãi đỗ xe</li>
+                                            <li>Dịch vụ vệ sinh</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -298,7 +248,7 @@
                         <div class="row">
                             <div class="col-lg-5">
                                 <div class="agent-desc">
-                                    <img src="client_part/img/properties/agent-contact.jpg" alt="">
+                                    <img src="../../client_part/img/properties/agent-contact.jpg" alt="">
                                     <div class="agent-title">
                                         <h5>Adam Smith</h5>
                                         <span>Saler Marketing</span>
@@ -328,18 +278,9 @@
             </div>
             <div class="col-lg-3">
                 <div class="property-sidebar">
-                    <h4>Search Property</h4>
+                    <h4>Tìm Kiếm Phòng Trọ</main>
+                    </h4>
                     <form action="#" class="sidebar-search">
-                        <div class="sidebar-btn">
-                            <div class="bt-item">
-                                <input type="radio" name="s-type" id="st-buy" checked>
-                                <label for="st-buy">Buy</label>
-                            </div>
-                            <div class="bt-item">
-                                <input type="radio" name="s-type" id="st-rent">
-                                <label for="st-rent">Rent</label>
-                            </div>
-                        </div>
                         <select>
                             <option value="">Locations</option>
                         </select>
@@ -417,6 +358,10 @@
             color: #ddd;
             background-color: white;
             pointer-events: none;
+        }
+
+        .product-fix-img {
+            height: 118px;
         }
     </style>
 }
